--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -1,10 +1,12 @@
 # Combining code and text with Jupyter {#getting-started-with-jupyter}
 
-```{r 11-how-to-get-started-using-r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r jupyter-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(magick)
 library(magrittr)
 library(knitr)
-knitr::opts_chunk$set(message = FALSE)
+
+knitr::opts_chunk$set(message = FALSE, 
+                      fig.align = "center")
 ```
 
 ## Overview
