--- a/preface-text.Rmd
+++ b/preface-text.Rmd
@@ -44,6 +44,6 @@ But if you are reading this independently, you may want to jump to these last th
 early before going on to make sure your computer is set up in such a way that you can
 try out the example code that we include throughout the book. 
 
-```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="100%", fig.retina = 2}
+```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="100%", fig.retina = 2, fig.align = "center"}
 knitr::include_graphics("img/chapter_overview.jpeg")
 ```
