--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -4,7 +4,11 @@
 library(magick)
 library(magrittr)
 library(knitr)
-knitr::opts_chunk$set(message = FALSE, echo = FALSE, warning = FALSE)
+
+knitr::opts_chunk$set(message = FALSE, 
+                      echo = FALSE, 
+                      warning = FALSE,
+                      fig.align = "center")
 ```
 
 > *You mostly collaborate with yourself, 
