--- a/inference.Rmd
+++ b/inference.Rmd
@@ -1,10 +1,10 @@
 # Introduction to statistical inference {#inference}
 
-```{r 11-setup, include = F}
-knitr::opts_chunk$set(warning = FALSE)
+```{r inference-setup, include = FALSE}
+knitr::opts_chunk$set(warning = FALSE, fig.align = "center")
 library(gridExtra)
 library(tidyverse)
-require(grid) #  grid.bezier()
+library(grid) #  grid.bezier()
 
 options(digits = 3) # set number of digits to display in output to match writing
 
@@ -84,8 +84,6 @@ broader population from which it is taken is referred to as **statistical infere
 ```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample.", out.width="100%"}
 knitr::include_graphics("img/population_vs_sample.png")
 ```
-
-</center>
 
 Note that proportions are not the *only* kind of population parameter we might
 be interested in. For example, suppose an undergraduate student studying at the University
@@ -190,14 +188,17 @@ sample from, and (2) the size of the sample to take.
 # hidden seed
 set.seed(123)
 ```
+
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
 library(infer)
 
 sample_1 <- rep_sample_n(tbl = airbnb, size = 40)
+
 airbnb_sample_1 <- summarize(sample_1,
   n = sum(room_type == "Entire home/apt"),
   prop = sum(room_type == "Entire home/apt") / 40
 )
+
 airbnb_sample_1
 ```
 
@@ -214,12 +215,15 @@ we would not get the same answer:
 # hidden seed
 set.seed(1234)
 ```
+
 ```{r 11-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
 sample_2 <- rep_sample_n(airbnb, size = 40)
+
 airbnb_sample_2 <- summarize(sample_2,
   n = sum(room_type == "Entire home/apt"),
   prop = sum(room_type == "Entire home/apt") / 40
 )
+
 airbnb_sample_2
 ```
 
@@ -264,13 +268,17 @@ set of listings in each sample together&mdash;and then use `summarize`
 to compute the proportion in each sample.
 We print both the first and last few entries of the resulting data frame
 below to show that we end up with 20,000 point estimates, one for each of the 20,000 samples.
+
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates <- samples |>
   group_by(replicate) |>
   summarize(sample_proportion = sum(room_type == "Entire home/apt") / 40)
+
 sample_estimates
+
 tail(sample_estimates)
 ```
+
 We can now visualize the sampling distribution of sample proportions
 for samples of size 40 using a histogram in Figure \@ref(fig:11-example-proportions7). Keep in mind: in the real world, 
 we don't have access to the full population. So we
@@ -278,13 +286,16 @@ can't take many samples and can't actually construct or visualize the sampling d
 We have created this particular example
 such that we *do* have access to the full population, which lets us visualize the 
 sampling distribution directly for learning purposes.
+
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40.", fig.retina = 2, out.width = "100%"}
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
   ylab("Count") +
   xlab("Sample proportions")
+
 sampling_distribution
 ```
+
 The sampling distribution in Figure \@ref(fig:11-example-proportions7) appears
 to be bell-shaped, is roughly symmetric, and has one peak. It is centered 
 around `r round(mean(sample_estimates$sample_proportion),1)` and the sample proportions
@@ -319,27 +330,34 @@ visiting Vancouver, Canada may wish to estimate the
 population *mean* (or average) price per night of Airbnb listings. Knowing
 the average could help them tell whether a particular listing is overpriced.
 We can visualize the population distribution of the price per night with a histogram. 
-```{r, echo = F}
+
+```{r, echo = FALSE}
 options(pillar.sigfig = 5)
 ```
-```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada.", fig.retina = 2, out.width = "100%"}
+
+```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night (Canadian dollars) for all Airbnb listings in Vancouver, Canada.", fig.retina = 2, out.width = "100%"}
 population_distribution <- ggplot(airbnb, aes(x = price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night ($)")
+  xlab("Price per night (Canadian dollars)")
+
 population_distribution
 ```
+
 In Figure \@ref(fig:11-example-means2), we see that the population distribution \index{population!distribution}
 has one peak. It is also skewed (i.e., is not symmetric): most of the listings are
 less than \$250 per night, but a small number of listings cost much more, 
 creating a long tail on the histogram's right side. 
 Along with visualizing the population, we can calculate the population mean,
 the average price per night for all the Airbnb listings. 
+
 ```{r 11-example-means-popmean, echo = TRUE, message = FALSE, warning = FALSE}
 population_parameters <- airbnb |>
   summarize(pop_mean = mean(price))
+
 population_parameters
 ```
+
 The price per night of all Airbnb rentals in Vancouver, BC 
 is \$`r round(population_parameters$pop_mean,2)`, on average. This value is our
 population parameter since we are calculating it using the population data. \index{population!parameter}
@@ -362,14 +380,17 @@ We can create a histogram to visualize the distribution of observations in the
 sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean
 of our sample.
 
-```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings.", fig.retina = 2, out.width = "100%"}
+```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night (Canadian dollars) for sample of 40 Airbnb listings.", fig.retina = 2, out.width = "100%"}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night ($)")
+  xlab("Price per night (Canadian dollars)")
+
 sample_distribution
+
 estimates <- one_sample |>
   summarize(sample_mean = mean(price))
+
 estimates
 ```
 
@@ -400,19 +421,21 @@ samples
 
 Now we can calculate the sample mean for each replicate and plot the sampling
 distribution of sample means for samples of size 40.
+
 ```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40.", fig.retina = 2, out.width = "100%"}
 sample_estimates <- samples |>
   group_by(replicate) |>
   summarize(sample_mean = mean(price))
+
 sample_estimates
 
 sampling_distribution_40 <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Sample mean price per night ($)")
+  xlab("Sample mean price per night (Canadian dollars)")
+
 sampling_distribution_40
 ```
-
 
 In Figure \@ref(fig:11-example-means4), the sampling distribution of the mean
 has one peak and is \index{sampling distribution!shape} bell-shaped. Most of the estimates are between 
@@ -489,14 +512,14 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) |>
 sampling_distribution_20 <- ggplot(sample_estimates_20, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night($)") +
+  xlab("Sample mean price per night(Canadian dollars)") +
   ggtitle("n = 20") 
 
 ## Sampling distribution n = 50
 sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night($)") +
+  xlab("Sample mean price per night(Canadian dollars)") +
   ggtitle("n = 50") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -504,7 +527,7 @@ sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
 sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night ($)") +
+  xlab("Sample mean price per night (Canadian dollars)") +
   ggtitle("n = 100") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -512,7 +535,7 @@ sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) 
 sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night ($)") +
+  xlab("Sample mean price per night (Canadian dollars)") +
   ggtitle("n = 500") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 ```
@@ -523,7 +546,10 @@ annotated_sampling_dist_20 <- sampling_distribution_20 +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20)) +
   ggtitle("n = 20") +
   annotate("text",
-    x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_20), hjust = 1, vjust = 1,
+    x = max_x(sampling_distribution_20), 
+    y = max_count(sampling_distribution_20), 
+    hjust = 1, 
+    vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))
   )
 #+
@@ -534,7 +560,10 @@ annotated_sampling_dist_50 <- sampling_distribution_50 +
   geom_vline(xintercept = mean(sample_estimates_50$sample_mean), col = "red") +
   ## x limits set the same as n = 20 graph, y is this graph
   annotate("text",
-    x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 1,
+    x = max_x(sampling_distribution_20), 
+    y = max_count(sampling_distribution_50), 
+    hjust = 1, 
+    vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 1))
   ) #+
 # annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 3,
@@ -543,7 +572,10 @@ annotated_sampling_dist_50 <- sampling_distribution_50 +
 annotated_sampling_dist_100 <- sampling_distribution_100 +
   geom_vline(xintercept = mean(sample_estimates_100$sample_mean), col = "red") +
   annotate("text",
-    x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 1,
+    x = max_x(sampling_distribution_20), 
+    y = max_count(sampling_distribution_100), 
+    hjust = 1, 
+    vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates_100$sample_mean), 1))
   ) #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 3,
@@ -552,7 +584,10 @@ annotated_sampling_dist_100 <- sampling_distribution_100 +
 annotated_sampling_dist_500 <- sampling_distribution_500 +
   geom_vline(xintercept = mean(sample_estimates_500$sample_mean), col = "red") +
   annotate("text",
-    x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_500), hjust = 1, vjust = 1,
+    x = max_x(sampling_distribution_20), 
+    y = max_count(sampling_distribution_500), 
+    hjust = 1, 
+    vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates_500$sample_mean), 1))
   ) #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_500), hjust = 1, vjust = 3,
@@ -630,51 +665,62 @@ large enough sample.
 
 
 ```{r 11-example-bootstrapping0, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of samples of different sizes from the population."}
-
 sample_10 <- airbnb |>
   rep_sample_n(10)
 sample_distribution_10 <- ggplot(sample_10, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night ($)") +
+  xlab("Price per night (Canadian dollars)") +
   ylab("Count") + 
   ggtitle("n = 10")
 
 sample_20 <- airbnb |>
   rep_sample_n(20)
+
 sample_distribution_20 <- ggplot(sample_20, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night ($)") +
+  xlab("Price per night (Canadian dollars)") +
   ylab("Count") + 
   ggtitle("n = 20")
+
 sample_50 <- airbnb |>
   rep_sample_n(50)
+
 sample_distribution_50 <- ggplot(sample_50, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night ($)") +
+  xlab("Price per night (Canadian dollars)") +
   ylab("Count") + 
   ggtitle("n = 50")
+
 sample_100 <- airbnb |>
   rep_sample_n(100)
+
 sample_distribution_100 <- ggplot(sample_100, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night ($)") +
+  xlab("Price per night (Canadian dollars)") +
   ylab("Count") + 
   ggtitle("n = 100")
 
 sample_200 <- airbnb |>
   rep_sample_n(200)
+
 sample_distribution_200 <- ggplot(sample_200, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night ($)") +
+  xlab("Price per night (Canadian dollars)") +
   ylab("Count") + 
   ggtitle("n = 200")
 
 grid.arrange(sample_distribution_10 + xlim(min(airbnb$price), 600),
-  sample_distribution_20 + xlim(min(airbnb$price), 600),
-  sample_distribution_50 + xlim(min(airbnb$price), 600),
-  sample_distribution_100 + xlim(min(airbnb$price), 600),
-  sample_distribution_200 + xlim(min(airbnb$price), 600),
-  population_distribution + ggtitle("Population distribution") + xlim(min(airbnb$price), 600),
+  sample_distribution_20 + 
+    xlim(min(airbnb$price), 600),
+  sample_distribution_50 + 
+    xlim(min(airbnb$price), 600),
+  sample_distribution_100 + 
+    xlim(min(airbnb$price), 600),
+  sample_distribution_200 + 
+    xlim(min(airbnb$price), 600),
+  population_distribution + 
+    ggtitle("Population distribution") + 
+    xlim(min(airbnb$price), 600),
   ncol = 2
 )
 # widths = c(2, 3),
@@ -712,6 +758,7 @@ For a sample of size $n$, you:
 ```{r 11-intro-bootstrap-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of the bootstrap process.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/intro-bootstrap.jpeg")
 ```
+
 ### Bootstrapping in R 
 Let’s continue working with our Airbnb example to illustrate how we might create
 and use a bootstrap distribution using just a single sample from the population. 
@@ -726,12 +773,14 @@ one_sample <- one_sample |>
   ungroup() |> select(-replicate)
 ```
 
-```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40.", fig.retina = 2, out.width = "100%"}
+```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night (Canadian dollars) for one sample of size 40.", fig.retina = 2, out.width = "100%"}
 one_sample
+
 one_sample_dist <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night ($)")
+  xlab("Price per night (Canadian dollars)")
+
 one_sample_dist
 ```
 
@@ -756,7 +805,7 @@ boot1 <- one_sample |>
 boot1_dist <- ggplot(boot1, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night ($)")
+  xlab("Price per night (Canadian dollars)")
 
 boot1_dist
 
@@ -782,7 +831,9 @@ this is often the best we can do.
 ```{r 11-bootstrapping4, echo = TRUE, message = FALSE, warning = FALSE}
 boot20000 <- one_sample |>
   rep_sample_n(size = 40, replace = TRUE, reps = 20000)
+
 boot20000
+
 tail(boot20000)
 ```
 
@@ -790,9 +841,10 @@ Let's take a look at histograms of the first six replicates of our bootstrap sam
 ```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histograms of first six replicates of bootstrap samples."}
 six_bootstrap_samples <- boot20000 |>
   filter(replicate <= 6)
+
 ggplot(six_bootstrap_samples, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night ($)") +
+  xlab("Price per night (Canadian dollars)") +
   ylab("Count") + 
   facet_wrap(~replicate)
 ```
@@ -817,12 +869,15 @@ our point estimate to behave if we took another sample.
 boot20000_means <- boot20000 |>
   group_by(replicate) |>
   summarize(mean = mean(price))
+
 boot20000_means
 tail(boot20000_means)
+
 boot_est_dist <- ggplot(boot20000_means, aes(x = mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night ($)") 
+  xlab("Sample mean price per night (Canadian dollars)") 
+
 boot_est_dist
 ```
 
@@ -839,22 +894,26 @@ sample_estimates <- samples |>
 sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night ($)")  
-
+  xlab("Sample mean price per night (Canadian dollars)")  
 
 annotated_sampling_dist <- sampling_dist +  
   xlim(min_x(sampling_dist), max_x(sampling_dist)) + 
   geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") +
   annotate("text",
-    x = max_x(sampling_dist), y = max_count(sampling_dist), hjust = 1, vjust = 1,
+    x = max_x(sampling_dist), y = max_count(sampling_dist), 
+    hjust = 1, 
+    vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1)))
+
 boot_est_dist_limits <- boot_est_dist +   
     xlim(min_x(sampling_dist), max_x(sampling_dist)) 
 
 annotated_boot_est_dist <- boot_est_dist_limits + 
   geom_vline(xintercept = mean(boot20000_means$mean), col = "red") +
   annotate("text",
-    x = max_x(sampling_dist), y = max_count(boot_est_dist_limits), vjust = 1, hjust = 1, 
+    x = max_x(sampling_dist), y = max_count(boot_est_dist_limits), 
+    vjust = 1, 
+    hjust = 1, 
     label = paste("mean = ", round(mean(boot20000_means$mean), 1))) 
 grid.arrange(annotated_sampling_dist + ggtitle("Sampling distribution"),
              annotated_boot_est_dist +  ggtitle("Bootstrap distribution"),
@@ -902,7 +961,9 @@ sam_dist <- one_sample_dist + ggtitle("Sample") + xlab("Price") +
     axis.ticks.y = element_blank(),
     axis.text.y = element_blank()
   )
+
 set.seed(2)
+
 boot2 <- one_sample |>
   rep_sample_n(size = 40, replace = TRUE, reps = 1)
 
@@ -1055,6 +1116,7 @@ bounds <- boot20000_means |>
   select(mean) |>
   pull() |>
   quantile(c(0.025, 0.975))
+
 bounds
 ```
 
