--- a/intro.Rmd
+++ b/intro.Rmd
@@ -3,12 +3,8 @@
 # R and the tidyverse {#intro}
 
 ```{r intro-setup, include=FALSE}
-#library(formatR)
-#if (!knitr:::is_html_output()) {
-#  options("width" = 56)
-#  knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 56, indent = 2), 
-#                        tidy = TRUE)
-#}
+# set as default because for some reason it breaks the pdf in this chapter
+knitr::opts_chunk$set(fig.align = "default")
 ```
 
 ## Overview
