--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -1,5 +1,12 @@
 # Regression I: K-nearest neighbors {#regression1}
 
+```{r regression1-setup, echo = FALSE, message = FALSE, warning = FALSE}
+library(knitr)
+library(plotly)
+
+knitr::opts_chunk$set(fig.align = "center")
+```
+
 ## Overview 
 
 This chapter continues our foray into answering predictive questions.
@@ -89,6 +96,7 @@ is fair, or perhaps how to set the price of a new listing.
 We begin the analysis by loading and examining the data, and setting the seed value.
 
 \index{seed!set.seed}
+
 ```{r 07-load, message = FALSE}
 library(tidyverse)
 library(tidymodels)
@@ -193,6 +201,7 @@ nearest_neighbors
 
 ```{r 07-knn3-example, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square feet) with lines to 5 nearest neighbors."}
 nearest_neighbors <- mutate(nearest_neighbors, twothou = rep(2000, 5))
+
 nn_plot <- small_plot +
   geom_segment(
     data = nearest_neighbors,
@@ -297,25 +306,26 @@ pts <- tibble(sqft = c(1250, 1850, 2250), price = c(250000, 200000, 500000))
 finegrid <- tibble(sqft = seq(from = 900, to = 3900, by = 10))
 
 # fit the model
-sacr_recipe_hid <- recipe(price ~ sqft, data = small_sacramento) %>%
-  step_scale(all_predictors()) %>%
+sacr_recipe_hid <- recipe(price ~ sqft, data = small_sacramento) |>
+  step_scale(all_predictors()) |>
   step_center(all_predictors())
 
-sacr_spec_hid <- nearest_neighbor(weight_func = "rectangular", neighbors = 4) %>%
-  set_engine("kknn") %>%
+sacr_spec_hid <- nearest_neighbor(weight_func = "rectangular", 
+                                  neighbors = 4) |>
+  set_engine("kknn") |>
   set_mode("regression")
 
-sacr_fit_hid <- workflow() %>%
-  add_recipe(sacr_recipe_hid) %>%
-  add_model(sacr_spec_hid) %>%
+sacr_fit_hid <- workflow() |>
+  add_recipe(sacr_recipe_hid) |>
+  add_model(sacr_spec_hid) |>
   fit(data = small_sacramento)
 
-sacr_full_preds_hid <- sacr_fit_hid %>% 
-                           predict(finegrid) %>%
+sacr_full_preds_hid <- sacr_fit_hid |> 
+                           predict(finegrid) |>
                            bind_cols(finegrid)
 
-sacr_new_preds_hid <- sacr_fit_hid %>% 
-                           predict(pts) %>%
+sacr_new_preds_hid <- sacr_fit_hid |> 
+                           predict(pts) |>
                            bind_cols(pts)
 
 # plot the vertical prediction errors
@@ -496,6 +506,7 @@ for (i in 1:6) {
         ggtitle(paste0("K = ", gridvals[[i]]))
   }
 }
+
 grid.arrange(grobs = plots, ncol = 2)
 ```
 
@@ -741,9 +752,8 @@ of `r format(round(knn_mult_mets |> pull(.estimate)), big.mark=",", nsmall=0, sc
 Figure \@ref(fig:07-knn-mult-viz) visualizes the model's predictions overlaid on top of the data. This 
 time the predictions are a surface in 3-D space, instead of a line in 2-D space, as we have 2
 predictors instead of 1.  
-```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "KNN regression model’s predictions represented as a surface in 3-D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms)."}
-library(plotly)
 
+```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "KNN regression model’s predictions represented as a surface in 3-D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms)."}
 xvals <- seq(from = min(sacramento_train$sqft), 
              to = max(sacramento_train$sqft), 
              length = 50)
@@ -758,7 +768,7 @@ zvals <- knn_mult_fit |>
 
 zvalsm <- matrix(zvals, nrow = length(xvals))
 
-plot_ly() |>
+plot_3d <- plot_ly() |>
   add_markers(
     data = sacramento_train,
     x = ~sqft,
@@ -777,6 +787,12 @@ plot_ly() |>
     z = ~zvalsm,
     colorbar = list(title = "Price (USD)")
   )
+
+if(!is_latex_output()){  
+  plot_3d
+} else {
+  knitr::include_graphics("img/plot3d_knn_regression.png")
+}
 ```
 
 We can see that the predictions in this case, where we have 2 predictors, form
