--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -6,7 +6,8 @@ library(tidyverse)
 library(canlang)
 library(cowplot)
 
-knitr::opts_chunk$set(fig.align = "center")
+# set as default because for some reason it breaks the pdf in this chapter
+knitr::opts_chunk$set(fig.align = "default")
 ```
 
 ## Overview
