--- a/reading.Rmd
+++ b/reading.Rmd
@@ -208,7 +208,7 @@ along with the tabular data that follows later in the file.
 ```code
 Data source: https://ttimbers.github.io/canlang/
 Data originally published in: Statistics Canada Census of Population 2016.
-Reproduced and distributed on an as is basis with their permission
+Reproduced and distributed on an as-is basis with their permission.
 category,language,mother_tongue,most_at_home,most_at_work,lang_known
 Aboriginal languages,"Aboriginal languages, n.o.s.",590,235,30,665
 Non-Official & Non-Aboriginal languages,Afrikaans,10260,4785,85,23415
@@ -256,7 +256,7 @@ of the data had information we didn't need to import:
 ```code
 Data source: https://ttimbers.github.io/canlang/
 Data originally published in: Statistics Canada Census of Population 2016.
-Reproduced and distributed on an as is basis with their permission
+Reproduced and distributed on an as-is basis with their permission.
 ```
 
 The column names began at line 4, so we skipped the first three lines. 
