intrormd types of questions -> types of question

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -10,8 +10,8 @@ knitr::opts_chunk$set(fig.align = "default")
 ## Overview
 
 This chapter provides an introduction to data science and the R programming language.
-The goal here is to get your hands dirty right from the start: we will walk through an entire data analysis,
-and along the way, introduce different types of data analysis questions, some fundamental programming 
+The goal here is to get your hands dirty right from the start! We will walk through an entire data analysis,
+and along the way introduce different types of data analysis question, some fundamental programming 
 concepts in R, and the basics of loading, cleaning, and visualizing data. In the following chapters, we will
 dig into each of these steps in much more detail; but for now, let's jump in to see how much we can do 
 with data science!
@@ -92,7 +92,7 @@ the analysis as well as the selection of appropriate tools.\index{question!data 
 \index{causal question!definition}
 \index{mechanistic question!definition}
 
-Table: (\#tab:questions-table) Types of data analysis questions [@leek2015question; @peng2015art].
+Table: (\#tab:questions-table) Types of data analysis question [@leek2015question; @peng2015art].
 
 | Question type | Description | Example |
 |---------------|-------------|---------|
