fixed an overcorrection more predictors is -> are -> is. 'is' is correct here.

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -642,7 +642,7 @@ variables on a small scale. But since the `recipe` we built above scales and cen
 all predictor variables, this is handled for us.
 
 Note that we also have the same concern regarding the selection of predictors
-in KNN regression as in KNN classification: more predictors are **not** always
+in KNN regression as in KNN classification: having more predictors is **not** always
 better, and the choice of which predictors to use has a potentially large influence
 on the quality of predictions. Fortunately, we can use the predictor selection 
 algorithm from the classification chapter in KNN regression as well.
