same overcorrection fixed in reg2

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -411,7 +411,7 @@ KNN regression: we just add more predictors to the model formula in the
 recipe. But recall that we do not need to use cross-validation to choose any parameters,
 nor do we need to standardize (i.e., center and scale) the data for linear regression. 
 Note once again that we have the same concerns regarding multiple predictors
- as in the settings of multivariable KNN regression and classification: more predictors are **not** always
+ as in the settings of multivariable KNN regression and classification: having more predictors is **not** always
 better. But because the same predictor selection 
 algorithm from the classification chapter extends to the setting of linear regression,
 it will not be covered again in this chapter.
