hid setup block in classification 2

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -1,6 +1,6 @@
 # Classification II: evaluation & tuning {#classification2}
 
-```{r classification2-setup}
+```{r classification2-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(gridExtra)
 
 knitr::opts_chunk$set(fig.align = "center")
