moved symbols up to top of index

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -279,7 +279,7 @@ to the data frame that `read_csv` outputs,
 so that we can refer to it later for analysis and visualization.
 
 The way to assign a name to a value in R is via the *assignment symbol* `<-`. 
-\index{assignsymb@\texttt{<-}|see{assignment symbol}}\index{assignment symbol}
+\index{aaaassignsymb@\texttt{<-}|see{assignment symbol}}\index{assignment symbol}
 On the left side of the assignment symbol you put the name that you want
 to use, and on the right side of the assignment symbol
 you put the value that you want the name to refer to.
@@ -516,7 +516,7 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
 > time, a single expression in R must be contained in a single line of code.
 > However, there *are* a small number of situations in which you can have a
 > single R expression span multiple lines. Above is one such case: here, R knows that a line cannot
-> end with a `+` symbol, \index{plussymb@$+$} and so it keeps reading the next line to figure out
+> end with a `+` symbol, \index{aaaplussymb@$+$|see{ggplot,add layer}} and so it keeps reading the next line to figure out
 > what the right hand side of the `+` symbol should be.  We could, of course,
 > put all of the added layers on one line of code, but splitting them across
 > multiple lines helps a lot with code readability. \index{multi-line expression}
@@ -609,7 +609,7 @@ grey to white to improve the contrast. We have also actually skipped the
 in the `ggplot` function, you don't actually need to `select` the columns in advance
 when creating a visualization. And finally, we provided *comments* next to 
 many of the lines of code below using the
-hash symbol `#`. When R sees a `#` sign, \index{comment} \index{commentsymb@\#|see{comment}} it 
+hash symbol `#`. When R sees a `#` sign, \index{comment} \index{aaacommentsymb@\#|see{comment}} it 
 will ignore all of the text that
 comes after the symbol on that line. So you can use comments to explain lines 
 of code for others, and perhaps more importantly, your future self!
