--- a/viz.Rmd
+++ b/viz.Rmd
@@ -269,7 +269,7 @@ There are a few basic aspects of a plot that we need to specify:
 - the **aesthetic mapping**, which tells \index{aesthetic mapping} `ggplot` how the columns in the data frame map to properties of the visualization
     - to create an aesthetic mapping, we use the `aes` function
     - here, we set the plot `x` axis to the `date_measured` variable, and the plot `y` axis to the `ppm` variable
-- the `+` operator, which tells `ggplot` that we would like to add another layer to the plot.
+- the `+` operator, which tells `ggplot` that we would like to add another layer to the plot.\index{aaaplussymb@$+$|see{ggplot!add layer}}\index{ggplot!add layer}
 - the **geometric object**, which specifies \index{aesthetic mapping} how the mapped data should be displayed
     - to create a geometric object, we use a `geom_*` function (see the [ggplot reference](https://ggplot2.tidyverse.org/reference/) for a list of geometric objects)
     - here, we use the `geom_point` function to visualize our data as a scatter plot
