--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -360,7 +360,7 @@ Vancouver, Calgary, and Edmonton columns into a single column called `region`,
 and create a column called `mother_tongue` that contains the count of how many
 Canadians report each language as their mother tongue for each metropolitan
 area. We use a colon `:` between Toronto and Edmonton to tell R to select all
-the columns between Toronto and Edmonton:  \index{colon symbol}\index{colonsymb@\texttt{:}|see{colon symbol}}
+the columns between Toronto and Edmonton:  \index{column range}\index{aaacolonsymb@\texttt{:}|see{column range}}
 
 ``` {r}
 lang_mother_tidy <- pivot_longer(lang_wide,
@@ -597,7 +597,7 @@ time-consuming, especially if you have a lot of columns! Another approach is to
 use a "select helper". Select helpers are operators that make it easier for
 us to select columns. For instance, we can use a select helper to choose a
 range of columns rather than typing each column name out. To do this, we use the
-colon (`:`) operator to denote the range. For example, to get all the columns in \index{colon symbol}
+colon (`:`) operator to denote the range. For example, to get all the columns in \index{column range}
 the `tidy_lang` data frame from `language` to `most_at_work` we pass
 `language:most_at_work` as the second argument to the `select` function.
 
@@ -1316,7 +1316,7 @@ To summarize statistics across many columns, we can use the
 However, in such a case, using `summarize` alone means that we have to 
 type out the name of each column we want to summarize. 
 To do this more efficiently, we can pair `summarize` with `across` \index{across}
-and use a colon `:` to specify a range of columns we would like  \index{colon symbol}
+and use a colon `:` to specify a range of columns we would like  \index{column range}
 to perform the statistical summaries on.
 Here we demonstrate finding the maximum value 
 of each of the numeric
