minor adjustment to plus symbol index entry

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -516,7 +516,7 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
 > time, a single expression in R must be contained in a single line of code.
 > However, there *are* a small number of situations in which you can have a
 > single R expression span multiple lines. Above is one such case: here, R knows that a line cannot
-> end with a `+` symbol, \index{aaaplussymb@$+$|see{ggplot,add layer}} and so it keeps reading the next line to figure out
+> end with a `+` symbol, \index{aaaplussymb@$+$|see{ggplot (add layer)}} and so it keeps reading the next line to figure out
 > what the right hand side of the `+` symbol should be.  We could, of course,
 > put all of the added layers on one line of code, but splitting them across
 > multiple lines helps a lot with code readability. \index{multi-line expression}
