reduced fig 11.1 size outwidth 100%

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -48,7 +48,7 @@ to make a conscious effort to perform data analysis in a reproducible manner.
 An example of what a Jupyter notebook looks like is shown in 
 Figure \@ref(fig:img-jupyter).
 
-```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2}
+```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/jupyter.png")
 ```
 
