fixed long subsection titles

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -700,7 +700,7 @@ filter(official_langs, region == "Montréal" & language == "French")
 ```
 
 
-### Extracting rows satisfying at least one of multiple conditions using `|`
+### Extracting rows satisfying at least one condition using `|`
 
 Suppose we were interested in the rows for only the Albertan cities 
 in our `official_langs` data set (Edmonton and Calgary). 
@@ -762,7 +762,7 @@ five_cities
 >c("Vancouver", "Toronto") %in% c("Toronto", "Vancouver")
 >```
 
-### Extracting rows with values above or below a threshold using `>` and `<`
+### Extracting rows above or below a threshold using `>` and `<`
 
 ``` {r changing_the_units, include = FALSE}
 census_popn <- 35151728
