changed inference chapter title to just stat inf, no intro to

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -1,4 +1,4 @@
-# Introduction to statistical inference {#inference}
+# Statistical inference {#inference}
 
 ```{r inference-setup, include = FALSE}
 knitr::opts_chunk$set(warning = FALSE, fig.align = "center")
