removed bitmap and scalable graphics from final viz format table

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1441,11 +1441,11 @@ ggsave("img/faithful_plot.svg", faithful_plot)
 ```
 
 ```{r, filesizes, echo = FALSE}
-file_sizes <- tibble(`Image type` = c("Bitmap / Raster", 
-                        "Bitmap / Raster", 
-                        "Bitmap / Raster", 
-                        "Bitmap / Raster",
-                        "Vector / Scalable Graphics"),
+file_sizes <- tibble(`Image type` = c("Raster", 
+                        "Raster", 
+                        "Raster", 
+                        "Raster",
+                        "Vector"),
        `File type` = c("PNG", "JPG", "BMP", "TIFF", "SVG"),
        `Image size` = c(paste(round(file.info("img/faithful_plot.png")["size"] 
                                     / 1000000, 2), "MB"),
